DEX-209 Plugin architecture in node
* Added the root project;
* dex-it/docker now runs node-it/docker before;
* Unit tests aren't forking JVM;
* ItSettings, DockerSettings are plugins now;